# nbq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.conf  install.sh
docs/: architecture.md  commands.md  data-format.md
inc/: commands.hpp  config.hpp  mcu.hpp  model.hpp  nbq.hpp  parser.hpp
src/: commands.cpp  config.cpp  mcu.cpp  model.cpp  nbq.cpp  parser.cpp
